--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<h1> Hello! </h1>
+<h1> Welcome to piccup </h1>
+<p> Piccup is a web-based platform for sharing and joining pick-up sports games at local public parks and facilities. </p>
