Added logo back in

--- a/index.html
+++ b/index.html
@@ -15,16 +15,13 @@
                     <div class="navbar-brand">
                         <a class="navbar-item">
                             <!--Add logo-->
-                            <img src="" id="logo"/>
                         </a>    
                     </div>
                 </div>
             </nav>
         <div class="hero-body is-small">
             <div class="container">
-                <h1 class="title is-size-1 has-text-centered">
-                    Piccup
-                </h1>
+                <img src="./logo.svg" id="logo"/>
             </div>
         </div>
         <!--Welcome message and Login Box-->
