--- a/homepage.html
+++ b/homepage.html
@@ -4,10 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Piccup</title>
+    <title>Piccup Homepage</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" />
     <link rel="stylesheet" href="stylesheet.css" />
 </head>
-<body id="root">
-    <h1>Homepage</h1>
+<body id="root" style="background-image: linear-gradient(to right,#008470,#00d1b2)">
+    <section class="hero is-bold" id="header">
+        <nav class="navbar">
+            <div class="container">
+                <div class="navbar-brand">
+                    <a class="navbar-item">
+                        <!--Add logo-->
+                        <img src="" id="logo"/>
+                    </a>    
+                </div>
+            </div>
+        </nav>
+        <div class="hero-body is-small">
+            <div class="container">
+                <img src="./logo.svg" id="logo"/>
+            </div>
+        </div>
 </body>
