--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" />
     <link rel="stylesheet" href="stylesheet.css" />
 </head>
+    <!--figure out how the background color will cover the whole screen-->
     <body id="root" style="background-image: linear-gradient(to right,#008470,#00d1b2)">
         <section class="hero is-bold" id="header">
             <nav class="navbar">
@@ -16,7 +17,7 @@
                         <a class="navbar-item">
                             <!--Add logo-->
                             <img src="" id="logo"/>
-                        </a>    
+                        </a>   
                     </div>
                 </div>
             </nav>
