--- a/homepage.html
+++ b/homepage.html
@@ -25,4 +25,9 @@
                 <img src="./logo.svg" id="logo"/>
             </div>
         </div>
+        <div class="container" id="game-form-container">
+            
+        </div>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="./game-form-script.js"></script>
 </body>
