--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" />
     <link rel="stylesheet" href="stylesheet.css" />
 </head>
-<body id="root" style="background-image: linear-gradient(to right,#008470,#00d1b2)">
+<body style="background-image: linear-gradient(to right,#008470,#00d1b2)">
     <section class="hero is-bold" id="header">
         <nav class="navbar">
             <div class="container">
