--- a/index.html
+++ b/index.html
@@ -36,13 +36,32 @@
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
   
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-    <script src="/__/firebase/8.0.2/firebase-app.js"></script>
+    <!-- <script src="/__/firebase/8.0.2/firebase-app.js"></script> -->
   
     <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
-    <script src="/__/firebase/8.0.2/firebase-analytics.js"></script>
+    <!-- <script src="/__/firebase/8.0.2/firebase-analytics.js"></script> -->
   
     <!-- Add Firebase products that you want to use -->
-    <script src="/__/firebase/8.0.2/firebase-auth.js"></script>
-    <script src="/__/firebase/8.0.2/firebase-firestore.js"></script>
+    <!-- <script src="/__/firebase/8.0.2/firebase-auth.js"></script>
+    <script src="/__/firebase/8.0.2/firebase-firestore.js"></script> -->
   
 </body>
+
+<!-- <div class = "modal-background"></div>
+<div class = "modal-content">
+    <div class = "content">
+        <p class = "title is-4">Sign up</p>
+    </div>
+    <form>
+        <div class="field" id="signup-email">
+            <div class="control">
+                <input class="input is-medium" type="email" placeholder="johnsmith@gmail.com" id="email">
+            </div>
+        </div>
+        <div class="field" id="signup-password-box">
+            <div class="control">
+                <input class="input is-medium" type="password" placeholder="Password" id="password">
+            </div>
+        </div>
+    </form>
+</div> -->
