--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="stylesheet.css" />
 </head>
     <!--figure out how the background color will cover the whole screen-->
-    <body id="root" style="background-image: linear-gradient(to right,#008470,#00d1b2)">
+    <body id="root">
         <section class="hero is-bold" id="header">
             <nav class="navbar">
                 <div class="container">
