--- a/homepage.html
+++ b/homepage.html
@@ -25,8 +25,7 @@
                 <img src="./logo.svg" id="logo"/>
             </div>
         </div>
-        <div class="container" id="game-form-container">
-            
+        <div class="box" id="game-form-container">
         </div>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="./game-form-script.js"></script>
