--- a/homepage.html
+++ b/homepage.html
@@ -25,9 +25,9 @@
                 <img src="./logo.svg" id="logo"/>
             </div>
         </div>
-        <div class="container" id="game-form-container">
-            
-        </div>
+        <section>
+        <div class="container" id="filter-container"></div>
+        </section>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="./game-form-script.js"></script>
+<script src="./home-page.js"></script>
 </body>
