--- a/homepage.html
+++ b/homepage.html
@@ -27,6 +27,8 @@
         </div>
         <div class="box" id="game-form-container">
         </div>
+        <div class="box" id="feed">
+        </div>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="./game-form-script.js"></script>
 </body>
