first commit to David

--- a/homepage.html
+++ b/homepage.html
@@ -30,4 +30,5 @@
         </section>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="./home-page.js"></script>
+<script src="https://kit.fontawesome.com/aa1d5476ca.js" crossorigin="anonymous"></script>
 </body>
