Resolved script conflicts

--- a/homepage.html
+++ b/homepage.html
@@ -32,7 +32,8 @@
         <section>
         <div class="container" id="filter-container"></div>
         </section>
+
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="./home-page.js"></script>
+<script src="./home-page.js" type = "module"></script>
 <script src="https://kit.fontawesome.com/aa1d5476ca.js" crossorigin="anonymous"></script>
 </body>
