--- a/homepage.html
+++ b/homepage.html
@@ -25,9 +25,7 @@
                 <img src="./logo.svg" id="logo"/>
             </div>
         </div>
-        <div class="box" id="game-form-container">
-        </div>
-        <div class="box" id="feed">
+        <div class="box has-text-centered" id="game-form-container">
         </div>
         <section>
         <div class="container" id="filter-container"></div>
