--- a/homepage.html
+++ b/homepage.html
@@ -25,14 +25,18 @@
                 <img src="./logo.svg" id="logo"/>
             </div>
         </div>
-        <div class="box has-text-centered" id="game-form-container">
-        </div>
         <section>
         <a class= "button is-white" href ="./profile.html">
             Profile
         </a>
         <div class="container" id="filter-container"></div>
         </section>
+        <div class="columns" id="homepage-columns">
+            <div class="column box" id="feed">
+            </div>
+            <div class="column is-one-quarter has-text-centered" id="game-form-container">
+            </div>
+        </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="./home-page.js" type = "module"></script>
