--- a/homepage.html
+++ b/homepage.html
@@ -29,7 +29,7 @@
         <a class= "button is-white" href ="./profile.html">
             Profile
         </a>
-        <div class="container" id="filter-container"></div>
+        <div class="box" id="filter-container"></div>
         </section>
         <div class="columns" id="homepage-columns">
             <div class="column box" id="feed">
