--- a/homepage.html
+++ b/homepage.html
@@ -32,14 +32,16 @@
         <div class="box" id="filter-container"></div>
         </section>
         <div class="columns" id="homepage-columns">
-            <div class="column box" id="feed">
+            <div class="column">
+                <div class="box" id="feed">
+                    <p class="subtitle is-4" id="no-games-message">No games available... try posting your own!</p>
+                </div>
             </div>
             <div class="column is-one-quarter has-text-centered" id="game-form-container">
             </div>
         </div>
-
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="./home-page.js" type = "module"></script>
-
+<script src="./data.js"></script>
 <script src="https://kit.fontawesome.com/aa1d5476ca.js" crossorigin="anonymous"></script>
 </body>
