edit profile form actually edits the profile

--- a/homepage.html
+++ b/homepage.html
@@ -14,9 +14,15 @@
             <div class="container">
                 <div class="navbar-brand">
                     <a class="navbar-item">
-                        <!--Add logo-->
-                        <img src="" id="logo"/>
-                    </a>    
+                        <div class="buttons is-grouped navbar-buttons">
+                            <a class="button is-white is-medium" href="homepage.html">
+                                <strong>Home</strong>
+                            </a>
+                            <a class="button is-white is-medium" href="profile.html">
+                                <strong>Profile</strong>
+                            </a>
+                        </div>
+                    </a>
                 </div>
             </div>
         </nav>
@@ -26,9 +32,6 @@
             </div>
         </div>
         <section>
-        <a class= "button is-white" href ="./profile.html">
-            Profile
-        </a>
         <div class="container" id="filter-container"></div>
     </section>
 
