--- a/profile.html
+++ b/profile.html
@@ -14,9 +14,15 @@
             <div class="container">
                 <div class="navbar-brand">
                     <a class="navbar-item">
-                        <!--Add logo-->
-                        <img src="" id="logo"/>
-                    </a>    
+                        <div class="buttons is-grouped navbar-buttons">
+                            <a class="button is-white is-medium" href="homepage.html">
+                                <strong>Home</strong>
+                            </a>
+                            <a class="button is-white is-medium" href="profile.html">
+                                <strong>Profile</strong>
+                            </a>
+                        </div>
+                    </a> 
                 </div>
             </div>
         </nav>
