--- a/index.html
+++ b/index.html
@@ -10,17 +10,13 @@
     <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.css" />
 </head>
     <!--figure out how the background color will cover the whole screen-->
-    <body id="root">
+    <body id="root" class="has-navbar-fixed-top">
         <section class="hero is-bold" id="header">
-            <nav class="navbar">
-                <div class="container">
-                    <div class="navbar-brand">
-                        <a class="navbar-item">
-                            <!--Add logo-->
-                            <img src="" id="logo"/>
-                        </a>   
-                    </div>
-                </div>
+            <nav class="navbar has-background-white is-fixed-top">
+                <a href="./">
+                <img class="navbar-brand" src="./logo-small.svg"/>
+                </a>
+
             </nav>
             <div class="hero-body is-small">
                 <div class="container">
