--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" />
     <link rel="stylesheet" href="stylesheet.css" />
 </head>
-<body style="background-image: linear-gradient(to right,#008470,#00d1b2)">
+<body style="background-image: linear-gradient(to right,#008470,#00d1b2)" class="has-navbar-fixed-top">
     <section class="hero is-bold" id="header">
         <nav class="navbar">
             <div class="container">
@@ -18,6 +18,19 @@
                         <img src="" id="logo"/>
                     </a>    
                 </div>
+            </div>
+        </nav>
+        <nav class="navbar has-background-white is-fixed-top">
+            <a href="./homepage.html">
+            <img class="navbar-brand" src="./logo-small.svg"/>
+            </a>
+            <div class="navbar-end">
+                <a class= "navbar-item is-size-4" href ="./homepage.html">
+                    Home
+                </a>
+                <a class= "navbar-item is-size-4 has-text-white has-background-danger" href ="./">
+                    Log Out
+                </a>
             </div>
         </nav>
         <div class="hero-body is-small">
