added back root id to profile.html

--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css" />
     <link rel="stylesheet" href="stylesheet.css" />
 </head>
-<body style="background-image: linear-gradient(to right,#008470,#00d1b2)" class="has-navbar-fixed-top">
+<body id="root" style="background-image: linear-gradient(to right,#008470,#00d1b2)" class="has-navbar-fixed-top">
     <section class="hero is-bold" id="header">
         <nav class="navbar has-background-white is-fixed-top">
             <a href="./homepage.html">
