--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <body id="root" class="has-navbar-fixed-top">
         <section class="hero is-bold" id="header">
             <nav class="navbar has-background-white is-fixed-top">
-                <a href="./">
-                <img class="navbar-brand" src="./logo-small.svg"/>
-                </a>
+                <div class="navbar-brand">
+                    <a href="./homepage.html">
+                        <img class="nav-logo" src="./logo-small.svg"/>
+                    </a>
+                </div>
 
             </nav>
             <div class="hero-body is-small">
