--- a/homepage.html
+++ b/homepage.html
@@ -10,17 +10,26 @@
 </head>
 <body class="has-navbar-fixed-top" style="background-image: linear-gradient(to right,#008470,#00d1b2)">
     <nav class="navbar has-background-white is-fixed-top">
-        <a href="./homepage.html">
-        <img class="navbar-brand" src="./logo-small.svg"/>
-        </a>
+        <div class="navbar-brand">
+            <a href="./homepage.html">
+                <img class="nav-logo" src="./logo-small.svg"/>
+            </a>
+            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+            </a>
+        </div>
+        <div id="navbarMenu" class="navbar-menu">
         <div class="navbar-end">
-            <a class= "navbar-item is-size-4" href ="./profile.html">
+            <a class= "navbar-item" href ="./profile.html">
                 <p>My Profile</p>
             </a>
-            <a class= "navbar-item is-size-4 has-text-white has-background-danger" href ="./">
+            <a class= "navbar-item has-text-white has-background-danger" href ="./">
                 Log Out
             </a>
         </div>
+    </div>
     </nav>
     <section class="hero is-bold" id="header">
         <div class="hero-body is-small">
