--- a/homepage.html
+++ b/homepage.html
@@ -39,6 +39,9 @@
         </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
 <script src="./home-page.js" type = "module"></script>
 
 <script src="https://kit.fontawesome.com/aa1d5476ca.js" crossorigin="anonymous"></script>
