profile working with database, edit option updates to firestore

--- a/profile.html
+++ b/profile.html
@@ -42,6 +42,9 @@
         </section>
     </section>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
     <script src="./profile.js" type = "module"></script>
     <script src="https://kit.fontawesome.com/aa1d5476ca.js" crossorigin="anonymous"></script>
 </body>
