--- a/homepage.html
+++ b/homepage.html
@@ -49,9 +49,9 @@
         </section>
         <div class="columns" id="homepage-columns">
             <div class="column">
-                <!-- <div class="box" id="feed">
+                <div class="box" id="feed">
                     <p class="subtitle is-4" id="no-games-message">No games available... try posting your own!</p>
-                </div> -->
+                </div>
             </div>
             <div class="column is-narrow has-text-centered" id="game-form-container">
             </div>
@@ -61,6 +61,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
 <script src="./home-page.js" type = "module"></script>
+<script src="./game-form-script.js" type = "module"></script>
 <script src="./data.js"></script>
 <script src="https://kit.fontawesome.com/aa1d5476ca.js" crossorigin="anonymous"></script>
 </body>
