--- a/homepage.html
+++ b/homepage.html
@@ -25,9 +25,9 @@
             <a class= "navbar-item" href ="./profile.html">
                 <p>My Profile</p>
             </a>
-            <button class= "navbar-item has-text-white has-background-danger" id="log-out-button" >
+            <a class= "navbar-item has-text-white has-background-danger" id="log-out-button" >
                 Log Out
-            </button>
+            </a>
         </div>
     </div>
     </nav>
